# fpga-core

./: .gitignore  CMakeLists.txt  Makefile  README.md  pnr.json  simout  synth.json  tangnano20k.cst  test-res.txt  test-res2.txt  verible.filelist
mem_files/: Makefile  Makefile-tmp  Makefile2  Untitled  add.c  add.elf  add.mem  add2  add2.mem  add2.s  link.ld  parser.c  pass.txt  simout  start.c  start.s  test-Makefile  uart-test.c  uart-test.data.mem  uart-test.elf  uart-test.mem
mem_files/rv32ui-p-tests/: rv32ui-p-add.mem  rv32ui-p-add_pass.txt  rv32ui-p-addi.mem  rv32ui-p-and.mem  rv32ui-p-and_fail.txt  rv32ui-p-and_pass.txt  rv32ui-p-andi.mem  rv32ui-p-andi_fail.txt  rv32ui-p-andi_pass.txt  rv32ui-p-auipc.mem  rv32ui-p-auipc_fail.txt  rv32ui-p-auipc_pass.txt  rv32ui-p-beq.mem  rv32ui-p-beq_fail.txt  rv32ui-p-bge.mem  rv32ui-p-bge_fail.txt  rv32ui-p-bge_pass.txt  rv32ui-p-bgeu.mem  rv32ui-p-bgeu_fail.txt  rv32ui-p-bgeu_pass.txt  rv32ui-p-blt.mem  rv32ui-p-blt_pass.txt  rv32ui-p-bltu.mem  rv32ui-p-bltu_fail.txt  rv32ui-p-bltu_pass.txt  rv32ui-p-bne.mem  rv32ui-p-bne_fail.txt  rv32ui-p-bne_pass.txt  rv32ui-p-fence_i.data.mem  rv32ui-p-fence_i.mem  rv32ui-p-jal.mem  (+79 more)
mem_files_compiled/: Makefile  start.s  uart-test.c  uart-test.data.mem  uart-test.elf  uart-test.mem  uart-test2.c
src/: alu_definitions.svh  controlunit_definitions.svh  definitions.sv  definitions.svh  gowin_prom.v  gowin_sdpb.v  sc_datapath.sv
synth/: tangnano20k.cst  uart_core.sv  uart_echo_test.sv
test/: Decoder_tb.cpp  Decoder_tb.sv  InstructionTest.cpp  InstructionTest.sv  RegisterFile_tb.sv  UART_Test.cpp  UART_Test.sv  misc.sv  register_file.cpp  register_file.sv  test_sc_datapath.v
tests/: ALUTest.cpp  ALUTest.sv  RegisterFile.cpp  RegisterFile_tb.cpp  RegisterFile_tb.sv
(+167 files in other folders)
